--- a/src/main/resources/templates/pages/createAccount.html
+++ b/src/main/resources/templates/pages/createAccount.html
@@ -60,7 +60,7 @@
                                 </div>
                             </diV>
 
-                            <a href="auth-login.html">Avez-vous un compte ? Connectez-vous</a>
+                            <a href="../auth-login.html">Avez-vous un compte ? Connectez-vous</a>
                             <div class="clearfix">
                                 <button type="submit" class="btn btn-primary float-end">S'inscrire</button>
                             </div>
