--- a/src/main/resources/templates/pages/healafricadashpage.html
+++ b/src/main/resources/templates/pages/healafricadashpage.html
@@ -3,7 +3,7 @@
       layout:decorate="~{layouts/dashboard}" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
-  <title>Main | Dashboard</title>
+  <title>HEAL-AFRICA | Dashboard</title>
 </head>
 <body>
   <div class="main-content container-fluid" layout:fragment="content">
