added changes to transfer patient

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -84,11 +84,17 @@
                             <span>DEVELOPPEUR</span>
                         </a>
                     </li>
+                    <li class="sidebar-item ">
+                        <a th:href="@{/login}">
+                            <i data-feather="log-out" width="20"></i>
+                            <span>Déconnexion</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
         </div>
     </div>
-    <script th:src="@{/js/sidebarActiveLink.js}"></script>
+
 </body>
 </html>
