--- a/src/main/resources/templates/pages/register_patient_healafrica.html
+++ b/src/main/resources/templates/pages/register_patient_healafrica.html
@@ -52,6 +52,10 @@
                 <label for="patientMail" class="form-label">Email</label>
                 <input type="email" class="form-control" id="patientMail" th:field="*{patientEmail}" aria-describedby="emailHelp">
               </div>
+<!--              <div class="col-md-6 mb-3">-->
+<!--                <label for="isTransferredPatient" class="form-label">Status de Transfert</label>-->
+<!--                <input type="checkbox" class="form-control" id="isTransferredPatient" th:field="*{isIstransfered()}">-->
+<!--              </div>-->
             </div>
             <div class="d-flex justify-content-between mt-3">
               <button type="submit" class="btn btn-primary">Submit</button>
