--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,10 +9,10 @@
   <footer th:fragment="footer">
     <div class="footer clearfix mb-0 text-muted">
       <div class="float-start">
-        <p>2022 &copy; Voler</p>
+        <p>2024 &copy; JaySyat Dev</p>
       </div>
       <div class="float-end">
-        <p>Crafted with <span class='text-danger'><i data-feather="heart"></i></span> by <a href="https://saugi.me">Saugi</a></p>
+        <p>Fait avec <span class='text-danger'><i data-feather="heart"></i></span> by <a href="#">Saiba</a></p>
       </div>
     </div>
   </footer>
